# esp8266-hal-next

./: .gitignore  Cargo.toml  README.md  README_cn.md
.cargo/: config
esp8266-wifi/: Cargo.toml  build.rs
esp8266-wifi/src/: compat.rs  lib.rs  phy.rs
esp8266/src/: dport.rs  efuse.rs  gpio.rs  i2s.rs  io_mux.rs  rng.rs  rtc.rs  rtccntl.rs  slc.rs  spi0.rs  timer.rs  uart1.rs  wdt.rs
examples/: wifi_test.rs
src/: lib.rs
xtensa-lx-rt/: Cargo.toml
xtensa-lx-rt/src/exception/: assembly_esp8266.rs  esp8266.rs
