[package]
name        = "esp8266-hal"
version     = "0.5.1"
authors     = ["Jesse Braham <jesse@beta7.io>", "Robin Appelman <robin@icewind.nl>"]
edition     = "2021"
description = "HAL for ESP8266 microcontrollers"
repository  = "https://github.com/esp-rs/esp8266-hal"
license     = "MIT OR Apache-2.0"

keywords   = ["embedded", "embedded-hal", "esp", "esp8266", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
embedded-hal = { version = "0.2", features = ["unproven"] }
esp8266      = { version = "0.7.0", path = "./esp8266", features = ["critical-section"] }
nb           = "1.0"
paste        = { version = "1.0", optional = true }
void         = { version = "1.0", default-features = false }
xtensa-lx    = { version = "0.8.0", features = ["esp8266"] }
xtensa-lx-rt = { version = "0.16.1", features = ["esp8266"], optional = true }
critical-section = { version = "1.1.1", features = ["restore-state-u32"] }

[dependencies.esp8266-hal-proc-macros]
path    = "procmacros"
version = "=0.1"

[dev-dependencies]
panic-halt = "0.2"
esp8266-wifi = { path = "./esp8266-wifi" }

[features]
default   = ["interrupt", "rt"]
interrupt = ["paste"]
rt        = ["xtensa-lx-rt"]

# Place program completely in RAM (needed when e.g. using only ROM bootloader,
# or for debugging).
all_in_ram = []

[profile.dev]
lto       = false
opt-level = 0

# Workaround for linker errors when using lto with the dev profile:
# https://github.com/rust-lang/compiler-builtins/issues/347
[profile.dev.package."*"]
opt-level = "s"
debug-assertions = false
overflow-checks = false

[profile.release.package."*"]
opt-level = "s"
debug-assertions = false
overflow-checks = false

[profile.release]
lto = false

[patch.crates-io]
xtensa-lx-rt = { path = "./xtensa-lx-rt" }

[workspace]
members = [
    ".",
    "esp8266-wifi",
]
