[package]
name = "esp8266-wifi"
version = "0.1.0"
edition = "2021"
authors = ["Antigravity"]

[dependencies]
esp8266-hal = { path = ".." }
critical-section = "1.1"
log = "0.4"
linked_list_allocator = { version = "0.10", default-features = false, features = ["const_mut_refs"] }

# smoltcp is used to parse raw IP and ethernet frames
smoltcp = { version = "0.11", default-features = false, features = ["medium-ethernet", "proto-ipv4", "socket-raw"] }

[features]
default = []
